--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "Ink": "~3.0.5",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "backbone": "~1.1.2"
   }
 }
